Accessibility Fix - Change links to a darker blue and semi bold to increase color contrast
Changed to a darker blue and semi bold, as well as added focus to the selector

--- a/style.css
+++ b/style.css
@@ -41,9 +41,9 @@ h2.cta-h2{text-transform:uppercase;font-family:'Raleway',sans-serif}
 p{font-weight:500;font-size:1rem;font-family:'Open Sans',sans-serif}
 div.columns.event-date p.athletics-month{color:#0c3b78;display:block;line-height:100%;text-transform:uppercase;font-weight:700;font-size:1.4rem;margin-top:-0.5rem;text-align:center}
 div.columns.event-date p.athletics-day{margin-top:-0.9rem;text-align:center;color:#0c3b78;display:block;line-height:100%;text-transform:uppercase;font-weight:700;font-size:1.75rem}
-a{font-family:'Open Sans',sans-serif}a:hover{text-decoration:underline}
-p.roster-name{font-size:1rem;font-family:'Raleway',sans-serif}p.table-section-header{text-align:left;font-weight:bold;color:#0c3b78}
-.sidebar-menu-header h3{text-transform:uppercase;font-size:1.125rem;font-weight:700;margin-bottom:0}
+a,a:focus{font-family:'Open Sans',sans-serif;color:#0055a5;font-weight:500}
+a:hover{text-decoration:underline}p.roster-name{font-size:1rem;font-family:'Raleway',sans-serif}
+p.table-section-header{text-align:left;font-weight:bold;color:#0c3b78}.sidebar-menu-header h3{text-transform:uppercase;font-size:1.125rem;font-weight:700;margin-bottom:0}
 .columns.sidebar-menu-header h3{color:#fff}h2.announcementheader{font-size:2.2rem;color:#003b76;margin-top:1rem}
 /*!
 Section 1: Foundation
